--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,34 +1,102 @@
-a{
-  text-decoration: none;
-}
+
+
+/*--------App--------*/
 
 .App {
+  font-family: 'Cedarville Cursive', cursive;
   text-align: center;
+  background-color: pink;
+  height: 100vh;
 }
 
-.Header{
+/*--------Header--------*/
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: lightgrey;
+  background-color: rgb(226, 108, 210);
 }
 
-.headerTitle{
+.headerLogo{
   display: block;
   box-sizing: border-box;
-  height: fit-content;
-  background-color: violet;
+
+  padding: 0%;
+  margin: 0%;
+}
+.headerImage{
+  border-radius: 50px;
+  width: 20vw;
+  margin: 0%;
 }
 
-.headerNavbar{
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.fa-paw{
+  color: black;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/*----Home----*/
+
+.Home{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
+  margin: 1rem 0%;
 }
 
-.headerNavbarOption{
-  width: fit-content;
-  margin: 1.5px auto;
-}.headerNavbarOption:hover{
-  background-color: pink;
+.homeCarousel{
+  display: block;
+  box-sizing: border-box;
+  width: 100vw;
+}
+
+.homeCarouselImage{
+  width: 100%;
+}
+
+.homeMap{
+  display: block;
+  box-sizing: border-box;
+  width: 45vw;
+
+}
+
+.homeMapImage{
+  width: 100%;
 }
