--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -87,7 +87,8 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 1rem 0%;
+  margin:  0%;
+  background-color: var(--secondary-color);
 }
 
   .homeCarousel{
@@ -110,19 +111,33 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100vw;
-    height: 20vh;
-    margin-top: 1rem;
+    height: 25vh;
+    margin: 0.5rem auto;
     justify-content: space-between;
+    align-content: space-between;
+    padding: 1rem;
+  }
+  .homeAptLink{
+    display: block;
+    box-sizing: border-box;
+    width: 40vw;
+    height: 100%;
+    margin: 0%;
   }
   .homeAptButton{
-    margin: 3rem 2.5rem;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    justify-content: center;
   }
 /*------------------------------------------------------------About Us------------------------------------------------------------*/
 .AboutUs{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 1rem 0%;
+  margin: 0%;
+  height: fit-content;
+  background-color: var(--secondary-color);
 }
   .aboutUsBadges{
     display: flex;
@@ -167,11 +182,29 @@
           font-size: small;
         }
 
+/*------------------------------------------------------------Location------------------------------------------------------------*/
+.Location{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100vw;
+  height: fit-content;
+  margin: 0.1rem auto;
+}
+  .locationMap{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 60vh;
+  }
+  .locationText{
+    display: block;
+    box-sizing: border-box;
+    margin: auto 1%;
+  }
 
 /*------------------------------------------------------------Footer------------------------------------------------------------*/
 
 .Footer{
-  
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
