Added new pictures in aboutUs and changed some descriptions

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -268,7 +268,7 @@
     flex-direction: row;
     justify-content: center;
   }
-    /*---------------------------------About Us---------------------------------*/
+    /*---------------------------------Badge---------------------------------*/
         .Badge{
           display: block;
           box-sizing: border-box;
