--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,16 +1,4 @@
 
-/*
-  Min-width: 320px (smaller phone viewpoints)
-  Min-width: 480px (small devices and most phones)
-  Min-width: 768px (most tablets)
-  Min-width: 992px (smaller desktop viewpoints)
-  Min-width: 1200px (large devices and wide screens)
-*/
-
-/*
-  Looks like shit breakpoint:
-  720px
-*/
 
 /*------------------------------------------------------------App------------------------------------------------------------*/
 
@@ -24,17 +12,22 @@
   height: 100vh;
 
 }
+a:link{
+  text-decoration: none;
+}
 
 /*------------------------------------------------------------Header------------------------------------------------------------*/
 
 .body {}
   .header{
-    overflow: hidden;
-    position: relative;
+    position: fixed;
     display: flex;
+    height: 10vh;
+    width: 100vw;
+    z-index: 99;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: var(--primary-color);
+    background: linear-gradient(to right, rgb(255, 63, 229), rgb(0, 0, 0));
 
   }
     .headerLogo{
@@ -45,12 +38,13 @@
       margin: 0%;
     }
       .headerImage{
+        position: fixed;
         border-radius: 50px;
         justify-self: left;
-        width: 15vw;
+        height: 10vh;
         max-width: 80px;
         margin: 0.1rem 0%;
-        margin-left: 0.5rem;
+        left: 0vw;
       }
     .headerMenuSign{
       position: absolute;
@@ -92,21 +86,63 @@
     }
     .headerHamburguer{
       width: 35px;
-      background-color: var(--primary-color);
-      color: black;
+      background-color: transparent;
+      color: white;
       margin: 0.4rem;
       margin-right: 1rem;
       padding-right: 2vw;
       font-size: x-large;
-    }.headerHamburguer:hover{background-color: violet;}
+    }
 
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .body #myLinks1 {
-    display: none;
-  }
-  .body #myLinks{
-    display: none;
-  }
+    #header_sidebar{
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      right: -100vw;
+      top: 10vh;
+      height: 85vh;
+      width: 190px;
+      background: linear-gradient(to right, rgba(255, 201, 248, 0), rgba(0, 0, 0, 0.596));
+      transition-duration: 1s;
+    }
+    #header_sidebar_blurr{
+      display: block;
+      position: fixed;
+      top: 10vh;
+      right: -100vw;
+      width: 100vw;
+      height: 93vh;
+      background-color: grey;
+      filter: blur(8px);
+      -webkit-filter: blur(8px);
+      opacity: 0.5;
+      transition-duration: 0.2s;
+      
+    }
+    .header_sidebar_item{
+      display: block;
+      box-sizing: border-box;
+      position: relative;
+      background-color: rgba(161, 22, 154, 0);
+      height: 60px;
+      width: 120px;
+      margin-right: 0vw;
+      line-height: 60px;
+      border-radius: 5px;
+      margin: 60px 0px;
+      margin-top: 5px;
+    }
+    .image{
+      height: 80px;
+      width: 190px;
+      margin: auto 0px;
+    }
+    .text{
+      position: relative;
+      top: -70px;
+      left: 30px;
+    }
+    
 
   /* Style navigation menu links */
   .body a {
@@ -118,110 +154,24 @@
 
   /* Style the hamburger menu */
   .body a.icon {
-    background:  var(--primary-color);
+    background:  transparent;
     display: block;
     position: absolute;
     right: 0;
     top: 0;
   }
-  .fa-paw{
-    color: var(--primary-color);
-  }
-
-  /* Add a grey background color on mouse-over */
-  .body a:hover {
-    background-color: violet;
-    color: black;
-  }
-  
-  /*--------480px--------*/
-@media all and (min-width: 527px){
-  .body {}
-  .header{
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color: var(--primary-color);
-
-  }
-    .headerLogo{
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      float: left;
-      padding: 0%;
-      margin: 0%;
-      
-    }
-      .headerImage{
-        border-radius: 50px;
-        justify-self: left;
-        width: 15vw;
-        max-width: 80px;
-        margin: 0.1rem 0%;
-        margin-left: 0.5rem;
-      }
-    .headerMenuSign{display: none;}
-    .headerHamburguer{
-      display: none;
-      width: 35px;
-      background-color: var(--primary-color);
-      color: black;
-      margin: 0.4rem;
-      margin-right: 1rem;
-      padding-right: 2vw;
-      font-size: x-large;
-    }.headerHamburguer:hover{background-color: violet;}
-
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .body #myLinks {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    right: 0vw;
-    margin: auto;
-  }
-
-  /* Style navigation menu links */
-  .body a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-    margin: auto 10px;
-  }
-
-  /* Style the hamburger menu */
-  .body a.icon {
-    background:  var(--primary-color);
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .fa-paw{
-    color: var(--primary-color);
-  }
-
-  /* Add a grey background color on mouse-over */
-  .body a:hover {
-    background-color: violet;
-    color: black;
-  }
-}
-
-
 
 /*------------------------------------------------------------Home------------------------------------------------------------*/
 
 .Home{
+  padding-top: 12vh;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin:  0%;
-  background-color: var(--secondary-color);
-  height: 100%;
+  margin: 0%;
+  background-color: rgb(248, 176, 212);
+  height: 100vh;
+  height: 88vh;
 }
 
   .homeCarousel{
@@ -239,41 +189,32 @@
       background-color: rgba(0, 0, 0, 0.5);
     }
 
-  .homeVeteInfo{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 100vw;
-    height: 25vh;
-    margin: 0.5rem auto;
-    justify-content: space-between;
-    align-content: space-between;
-    padding: 1rem;
-  }
-  .homeAptLink{
-    height: 100%;
-    width: 40vw;
-    align-content: center;
-    justify-content: center;
-  }
-  .homeAptButton{
-    display: block;
-    box-sizing: border-box;
-    background-color: blue;
-    border-radius: 5px;
-    margin: 0%;
-    height: 100%;
-    width: 100%;
-    padding: 2rem 1rem;
-  }
+    #homeVeteInfo{
+      display: flex;
+      flex-direction: column;
+      width: 100vw;
+      height: fit-content;
+    }
+    #home_turno{
+      display: block;
+      box-sizing: border-box;
+      width: 80vw;
+      margin: auto;
+      margin-top: 10px;
+      background-color: lightblue;
+      border: 1px solid;
+      border-radius: 5px;
+      padding: 10px;
+      box-shadow: 5px 10px;
+    }
 
 /*----------Map----------*/
   #mapContainerStyle{
     display: block;
     box-sizing: border-box;
-    width: 40vw;
-    height: 100%;
-    margin: 0;
+    width: 80vw;
+    height: 15vh;
+    margin: 20px auto;
     border-radius: 5px
   };
 
@@ -379,11 +320,12 @@
   }
 /*------------------------------------------------------------About Us------------------------------------------------------------*/
 .AboutUs{
+  padding-top: 12vh;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   margin: 0%;
-  height: fit-content;
+  height: 100vh;
   background-color: var(--secondary-color);
 }
   .aboutUsBadges{
@@ -431,22 +373,31 @@
 
 /*------------------------------------------------------------Location------------------------------------------------------------*/
 .Location{
+  padding-top: 12vh;
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   width: 100vw;
-  height: fit-content;
-  margin: 0.1rem auto;
+  margin: auto;
 }
   .locationMap{
     display: flex;
     flex-wrap: wrap;
     width: 100vw;
-    height: 60vh;
+    height: 50vh;
   }
-  .locationText{
-    display: block;
-    box-sizing: border-box;
-    margin: 1% auto;
+  #contact_info{
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+    width: 100vw;
+  }
+
+/*------------------------------------------------------------Mission------------------------------------------------------------*/
+  .Mission{
+    padding-top: 12vh;
+    height: 100vh;
   }
 
 /*------------------------------------------------------------Footer------------------------------------------------------------*/
