--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -170,8 +170,7 @@ a:link{
   flex-direction: column;
   margin: 0%;
   background-color: rgb(248, 176, 212);
-  height: 100vh;
-  height: 88vh;
+  min-height: 100vh;
 }
 
   .homeCarousel{
@@ -325,7 +324,7 @@ a:link{
   flex-wrap: wrap;
   flex-direction: column;
   margin: 0%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--secondary-color);
 }
   .aboutUsBadges{
@@ -333,6 +332,7 @@ a:link{
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+
   }
     /*---------------------------------Badge---------------------------------*/
         .Badge{
@@ -374,7 +374,7 @@ a:link{
 /*------------------------------------------------------------Location------------------------------------------------------------*/
 .Location{
   padding-top: 12vh;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
   width: 100vw;
@@ -392,6 +392,7 @@ a:link{
     flex-direction: column;
     margin-top: auto;
     width: 100vw;
+    background-color: grey;
   }
 
 /*------------------------------------------------------------Mission------------------------------------------------------------*/
