--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -456,4 +456,12 @@ a:link{
     margin: 0%;  
   }
 
+  #version{
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    margin-right: 0vw;
+    color: rgb(54, 54, 54);
+    
+  }
   
