--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -32,6 +32,9 @@ a:link{
   }
     .headerLogo{
       display: flex;
+      position: fixed;
+      left: 5px;
+      top: 5px;
       flex-wrap: wrap;
       flex-direction: row;
       padding: 0%;
@@ -41,7 +44,6 @@ a:link{
         position: fixed;
         border-radius: 50px;
         justify-self: left;
-        height: 10vh;
         max-width: 80px;
         margin: 0.1rem 0%;
         left: 0vw;
@@ -165,13 +167,13 @@ a:link{
 
 .Home{
   padding-top: 12vh;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  margin: 0%;
   background-color: rgb(248, 176, 212);
   min-height: 100vh;
 }
+
+  #carouselClass{
+    margin: auto;
+  }
 
   .homeCarousel{
     display: block;
@@ -188,6 +190,12 @@ a:link{
       background-color: rgba(0, 0, 0, 0.5);
     }
 
+    #homeVideo{
+      display: none;
+      box-sizing: border-box;
+      box-shadow: 10px 10px 5px grey;
+    }
+
     #homeVeteInfo{
       display: flex;
       flex-direction: column;
@@ -201,10 +209,10 @@ a:link{
       margin: auto;
       margin-top: 10px;
       background-color: lightblue;
-      border: 1px solid;
       border-radius: 5px;
       padding: 10px;
-      box-shadow: 5px 10px;
+      border: 1px solid grey;
+      box-shadow: 10px 10px 5px grey;
     }
 
 /*----------Map----------*/
@@ -214,7 +222,9 @@ a:link{
     width: 80vw;
     height: 15vh;
     margin: 20px auto;
-    border-radius: 5px
+    border-radius: 5px;
+    box-shadow: 10px 10px 5px grey;
+    
   };
 
   @media all and (min-width: 480px){
@@ -280,20 +290,24 @@ a:link{
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
-      margin:  0%;
+      margin: 0%;
       background-color: var(--secondary-color);
     }
     
+      #carouselClass{
+        margin: auto;
+      }
+
         .carousel{
           max-width: 500px;
           margin: 1% auto;
         }
-        .homeCarouselTitle{
-          background-color: rgba(0, 0, 0, 0.5);
-        }
-        .homeCarouselDescription{
-          background-color: rgba(0, 0, 0, 0.5);
-        }
+          .homeCarouselTitle{
+            background-color: rgba(0, 0, 0, 0.5);
+          }
+          .homeCarouselDescription{
+            background-color: rgba(0, 0, 0, 0.5);
+          }
     
       .homeVeteInfo{
         display: flex;
@@ -304,19 +318,28 @@ a:link{
         border: black solid 1px;
         height: 500px;
       }
-      .homeAptLink{
-        width: fit-content;
-      }
-      a.homeAptLink{
-        height: 10px;
-        margin: 0%;
-      }
-      .homeAptButton{
-        background-color: blue;
-        border-radius: 5px;
-        height: fit-content;
-      }
+        .homeAptLink{
+          width: fit-content;
+        }
+        a.homeAptLink{
+          height: 10px;
+          margin: 0%;
+        }
+        .homeAptButton{
+          background-color: blue;
+          border-radius: 5px;
+          height: fit-content;
+        }
   }
+
+  @media all and (min-width:1024px){
+    #homeVideo{
+      display: block;
+      box-sizing: border-box;
+      margin: auto;
+    }
+  }
+
 /*------------------------------------------------------------About Us------------------------------------------------------------*/
 .AboutUs{
   padding-top: 12vh;
