--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -51,8 +51,8 @@ a:link{
       }
     .headerMenuSign{
       position: absolute;
-      top: 1.5vh;
-      right: 20vw;
+      top: 10px;
+      right: 60px;
       width: fit-content;
       height: fit-content;
       padding: 0% 2%;
