--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -23,7 +23,7 @@ a:link{
   .header{
     position: fixed;
     display: flex;
-    height: 10vh;
+    height: 60px;
     width: 100vw;
     z-index: 99;
     flex-wrap: wrap;
@@ -102,24 +102,24 @@ a:link{
       flex-direction: column;
       position: fixed;
       right: -100vw;
-      top: 10vh;
-      height: 85vh;
+      top: 60px;
+      height: 100vh;
       width: 190px;
       background: linear-gradient(to right, rgba(255, 201, 248, 0), rgba(0, 0, 0, 0.596));
-      transition-duration: 1s;
+      transition-duration: 0.06s;
     }
     #header_sidebar_blurr{
       display: block;
       position: fixed;
-      top: 10vh;
+      top: 60px;
       right: -100vw;
       width: 100vw;
       height: 93vh;
-      background-color: grey;
-      filter: blur(8px);
-      -webkit-filter: blur(8px);
-      opacity: 0.5;
-      transition-duration: 0.2s;
+      background-color: rgb(10, 68, 63);
+      filter: blur(1px);
+      -webkit-filter: blur(1px);
+      opacity: 0.2;
+      transition-duration: 0.1s;
       
     }
     .header_sidebar_item{
@@ -376,8 +376,7 @@ a:link{
           background-color: transparent;
         }
           .badgeFile{
-            width: 200px; 
-            height: fit-content; 
+            width: 200px;
             object-fit: cover;
           }
         .badgeName{
