played a little with footer social network's css, so iphone would stop being a pain in my code

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -447,8 +447,8 @@ a:link{
     width: fit-content;
   }
       .footerSNcontainer p {
-        width: fit-content;
-        margin: auto 0%;
+       line-height: 30px;
+       margin: auto;
       }
       .footerSNimage{
         width: 50px;
